--- a/about_me/index.html
+++ b/about_me/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joseph "JPLC" Cassano | Home</title>
+<title>Joseph "JPLC" Cassano | About Me</title>
 
 <!-- Google Analytics -->
 <script>
@@ -200,11 +200,15 @@ img.customBorder
 <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
 
-<h2>Home</h2>
+<h2>About Me</h2>
 
 <div id="Content">
-<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+<p class="centeredImage">
+<img src="/images/my_face.jpg" alt="My face">
+</p>
+<p>I am Joseph Cassano (also known as JPLC), a Canadian video game developer.</p>
+
+<p>You can contact me at my e-mail: joseph DOT cassano AT jplc DOT ca</p>
 </div>
 
 <p>
