--- a/accounts/index.html
+++ b/accounts/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joseph "JPLC" Cassano | Home</title>
+<title>Joseph "JPLC" Cassano | Various Accounts</title>
 
 <!-- Google Analytics -->
 <script>
@@ -200,11 +200,106 @@ img.customBorder
 <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
 
-<h2>Home</h2>
+<h2>Various Accounts</h2>
+
+
 
 <div id="Content">
-<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+
+<p>The following is a list of my various accounts in various places. This is so people can recognize me on other sites. I try to keep my username as JPLC in most places, but sometimes that doesn't work out. In the cases where my username isn't JPLC, I'll put the username in brackets beside the link.</p>
+
+
+
+<p><strong>Social Networks</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://twitter.com/JPLC/">Twitter</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://ca.linkedin.com/in/josephcassano">LinkedIn (Joseph Cassano)</a></p>
+
+
+
+<p><strong>Flash Game Portals</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://the-unknown-one.newgrounds.com/">Newgrounds (The-Unknown-One)</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.kongregate.com/accounts/JPLC">Kongregate</a></p>
+
+
+
+<p><strong>Open Source Code</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "https://github.com/MultiversalNomad">GitHub (MultiversalNomad)</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "https://gist.github.com/MultiversalNomad">Gist (MultiversalNomad)</a></p>
+
+
+
+<p><strong>Video</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.youtube.com/user/MultiversalNomad">YouTube (MultiversalNomad)</a></p>
+
+
+
+<p><strong>Visual Art</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://temporal-nomad.deviantart.com/">deviantART (Temporal-Nomad)</a></p>
+
+
+
+<p><strong>Photography</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.flickr.com/people/jplc/">Flickr (The Unknown One)</a></p>
+
+
+
+<p><strong>Communities</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.gamasutra.com/blogs/JosephCassano/508/">Gamasutra (Joseph Cassano)</a></p>
+
+
+
+<p><strong>Gaming Services (Console)</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://us.playstation.com/playstation/psn/visit/profiles/MultiversalNomad">PlayStation Network (MultiversalNomad)</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://live.xbox.com/en-US/Profile?Gamertag=JPLC">Xbox LIVE</a></p>
+
+
+
+<p><strong>Gaming Services (PC)</strong>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://steamcommunity.com/id/jplc">Steam</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://profile.xfire.com/jplc">Xfire</a></p>
+
 </div>
 
 <p>
