--- a/error_messages/403/index.html
+++ b/error_messages/403/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joseph "JPLC" Cassano | Home</title>
+<title>Joseph "JPLC" Cassano | Error | 403 Forbidden</title>
 
 <!-- Google Analytics -->
 <script>
@@ -200,11 +200,10 @@ img.customBorder
 <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
 
-<h2>Home</h2>
+<h2>403 Forbidden</h2>
 
 <div id="Content">
-<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+<p>Seems like the server doesn't allow access to the requested page or directory. Try one of the navigation links above to find what you were looking for.</p>
 </div>
 
 <p>
