--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joseph "JPLC" Cassano | Home</title>
+<title>Joseph "JPLC" Cassano | Games | Dodge & Shoot</title>
 
 <!-- Google Analytics -->
 <script>
@@ -200,11 +200,46 @@ img.customBorder
 <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
 
-<h2>Home</h2>
+<h2>Dodge & Shoot</h2>
+
+
 
 <div id="Content">
-<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+
+<p>If the game below is not working, make sure you have the latest version of the <a href="http://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
+
+</div>
+
+<br>
+
+<object width="550" height="500">
+
+<param name="movie" value="/flash/dodge_and_shoot.swf">
+
+<embed src="/flash/dodge_and_shoot.swf" width="550" height="500">
+
+</embed>
+
+</object>
+
+<div id="Content">
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/blog/?p=112">Read Blog post</a>
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
+
 </div>
 
 <p>
