--- a/games/index.html
+++ b/games/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joseph "JPLC" Cassano | Home</title>
+<title>Joseph "JPLC" Cassano | Games</title>
 
 <!-- Google Analytics -->
 <script>
@@ -200,11 +200,49 @@ img.customBorder
 <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
 
-<h2>Home</h2>
+<h2>Games</h2>
 
 <div id="Content">
-<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+<p>The following are links to games I have made. The list is reverse chronological; newer games are at the top, older ones are at the bottom.</p>
+
+<img src="/images/DodgeAndShoot_thumb.jpg" class="floatRight gameOffset customBorder" alt="Dodge & Shoot">
+<p><strong>Dodge & Shoot</strong>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "dodge_and_shoot/">Play here</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/blog/?p=112">Read Blog post</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></p>
+
+<img src="/images/CaptureTheFrog_thumb.jpg" class="floatRight gameOffset customBorder" alt="Capture The Frog">
+<p><strong>Capture The Frog</strong>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "capture_the_frog/">Play here</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/blog/?p=72">Read Blog post</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></p>
+</div>
+
+<p><strong>---</strong></p>
+
+<h3>Prototypes</h3>
+<div id="Content">
+<p>These are prototype builds of gameplay that I am working on. This list may shrink/change if the gameplay is incorporated into final game builds.</p>
+
+<p><strong>Unity Project - Third Person Movement and Camera Control v1.0</strong>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "prototypes/unity_basic_char_control_v1_0/">Play here</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/blog/?p=369">Read Blog post</a></p>
 </div>
 
 <p>
