--- a/testingjekyll.html
+++ b/testingjekyll.html
@@ -2,15 +2,17 @@
 ---
 <!DOCTYPE html>
 <html>
-	{% include head.html %}
-	<body>
-		{% include header.html %}
-		<h2>Home</h2>
+    {% include head.html %}
+    <body>
+        {% include header.html %}
+        <h2>Home</h2>
 
-		<div id="Content">
-			<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-			<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
-		</div>
-		{% include footer.html %}
-	</body>
+        <div id="Content">
+            <p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
+            <p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+        </div>
+        <p>~</p>
+        {% include ads.html %}
+        {% include footer.html %}
+    </body>
 </html>
