--- a/testingjekyll.html
+++ b/testingjekyll.html
@@ -1,9 +1,6 @@
 ---
 layout: default
+title: Home
 ---
-<h2>Home</h2>
-
-<div id="Content">
-    <p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-    <p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
-</div>
+<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
+<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
