--- a/about_me/testingjekyll.html
+++ b/about_me/testingjekyll.html
@@ -1,216 +1,9 @@
 ---
+layout: default
+title: About Me
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<title>Joseph "JPLC" Cassano | About Me</title>
-
-<!-- Google Analytics -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-8277874-3');  // Replace with your property ID.
-ga('send', 'pageview');
-
-</script>
-<!-- End Google Analytics -->
-
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-<link rel="shortcut icon" href="/favicon.ico" >
-
-<link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
-
-
-
-<style type="text/css" media="screen" >
-
-body
-
-	{
-
-	margin:50px 0px; padding:0px;
-
-	text-align:center;
-
-	}
-
-	
-
-#Content
-
-	{
-
-	width:500px;
-
-	margin:0px auto;
-
-	text-align:left;
-
-	}
-
-
-
-p.centeredImage
-
-	{
-
-	text-align:center;
-
-	margin-top:0px;
-
-	margin-bottom:0px;
-
-	padding:0px;
-
-	}
-
-
-
-a
-
-	{text-decoration : none} 
-
-
-
-a:link
-
-	{color : #484BA9} 
-
-
-
-a:visited
-
-	{color : #484BA9} 
-
-
-
-a:active
-
-	{color : #DBDCFE} 
-
-
-
-a:hover
-
-	{color : #0000ff}
-
-
-
-img.floatLeft
-
-	{
-
-	float: left;
-
-	margin 4px;
-
-	}
-
-
-
-img.gameOffset
-
-	{
-
-	position: relative;
-
-	left: -100px;	
-
-	}
-
-
-
-img.floatRight
-
-	{
-
-	float: right;
-
-	margin: 4px;
-
-	}
-
-
-
-img.customBorder
-
-	{
-
-	border: 3px black solid
-
-	}
-
-</style>
-
-
-
-<script type="text/javascript" src="/lightbox/js/prototype.js"></script>
-
-<script type="text/javascript" src="/lightbox/js/scriptaculous.js?load=effects,builder"></script>
-
-<script type="text/javascript" src="/lightbox/js/lightbox.js"></script>
-
-
-
-<link rel="stylesheet" href="/lightbox/css/lightbox.css" type="text/css" media="screen" />
-
-
-
-</head>
-
-<body>
-
-<h1>Joseph "JPLC" Cassano</h1>
-
-
-
-<p class="centeredImage"><img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940"></p>
-<p>
-<a href = "/">Home</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href = "/blog/">Blog</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href = "/about_me/">About Me</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href = "/games/">Games</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href= "/accounts/">Various Accounts</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href= "/portfolio/">Portfolio</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href= "http://ca.linkedin.com/in/josephcassano">R&eacute;sum&eacute;</a>
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
-</p>
-
-<h2>About Me</h2>
-
-<div id="Content">
 <p class="centeredImage">
 <img src="/images/my_face.jpg" alt="My face">
 </p>
 <p>I am Joseph Cassano (also known as JPLC), a Canadian video game developer.</p>
-
 <p>You can contact me at my e-mail: joseph DOT cassano AT jplc DOT ca</p>
-</div>
-{% include footer.html %}
-</body>
-</html>
