--- a/testingjekyll.html
+++ b/testingjekyll.html
@@ -2,5 +2,10 @@
 layout: default
 title: Home
 ---
-<p>Welcome! This is the website of Joseph Cassano. I also go by JPLC in most places online.</p>
-<p>Feel free to have a look around. The Blog &mdash; titled "Mulling Over The Multiverse" &mdash; is for my long-form ideas/ramblings, but if you want to know what I'm up to presently, my Twitter account is much more active (<a href="http://www.twitter.com/JPLC">@JPLC</a>).</p>
+<p>Welcome! This is the website of {{ site.firstName }} {{ site.lastName }}. I also go by {{ site.nickname }} in some places online.</p>
+<p>Feel free to have a look around.</p>
+<p>
+    <li>Twitter: <a href="{{ site.twitterUrl }}">{{ site.twitterName }}</a></li>
+    <li>GitHub: <a href="{{ site.gitHubUrl }}">{{ site.gitHubName }}</a></li>
+    <li>GitHub Gist: <a href="{{ site.gitHubGistUrl }}"></a>{{ site.gitHubGistName }}</li>
+</p>
