--- a/about_me/testingjekyll.html
+++ b/about_me/testingjekyll.html
@@ -5,5 +5,5 @@ title: About Me
 <p class="centeredImage">
 <img src="/images/my_face.jpg" alt="My face">
 </p>
-<p>I am Joseph Cassano (also known as JPLC), a Canadian video game developer.</p>
-<p>You can contact me at my e-mail: joseph DOT cassano AT jplc DOT ca</p>
+<p>I am {{ site.firstName }} {{ site.lastName }} (also known as {{ site.nickname }}), a Canadian video game developer.</p>
+<p>You can contact me at my e-mail: {{ site.emailWritten }}</p>
