--- a/testingjekyll.html
+++ b/testingjekyll.html
@@ -7,5 +7,5 @@ title: Home
 <p>
     <li>Twitter: <a href="{{ site.twitterUrl }}">{{ site.twitterName }}</a></li>
     <li>GitHub: <a href="{{ site.gitHubUrl }}">{{ site.gitHubName }}</a></li>
-    <li>GitHub Gist: <a href="{{ site.gitHubGistUrl }}"></a>{{ site.gitHubGistName }}</li>
+    <li>GitHub Gist: <a href="{{ site.gitHubGistUrl }}">{{ site.gitHubGistName }}</a></li>
 </p>
