--- a/accounts/testingjekyll.html
+++ b/accounts/testingjekyll.html
@@ -5,42 +5,60 @@ title: Various Accounts
 <p>The following is a list of my various accounts in various places. This is so people can recognize me on other sites. I try to keep my username as JPLC in most places, but sometimes that doesn't work out. In the cases where my username isn't JPLC, I'll put the username in brackets beside the link.</p>
 <p>
     <strong>Social Networks</strong>
-    <li><a href = "http://twitter.com/JPLC/">Twitter</a></li>
-    <li><a href = "http://ca.linkedin.com/in/josephcassano">LinkedIn (Joseph Cassano)</a></li>
+    <ul>
+        <li><a href = "http://twitter.com/JPLC/">Twitter</a>
+        <li><a href = "http://ca.linkedin.com/in/josephcassano">LinkedIn (Joseph Cassano)</a>
+    </ul>
 </p>
 <p>
     <strong>Flash Game Portals</strong>
-    <li><a href = "http://the-unknown-one.newgrounds.com/">Newgrounds (The-Unknown-One)</a></li>
-    <li><a href = "http://www.kongregate.com/accounts/JPLC">Kongregate</a></li>
+    <ul>
+        <li><a href = "http://the-unknown-one.newgrounds.com/">Newgrounds (The-Unknown-One)</a>
+        <li><a href = "http://www.kongregate.com/accounts/JPLC">Kongregate</a>
+    </ul>
 </p>
 <p>
     <strong>Open Source Code</strong>
-    <li><a href = "https://github.com/MultiversalNomad">GitHub (MultiversalNomad)</a></li>
-    <li><a href = "https://gist.github.com/MultiversalNomad">Gist (MultiversalNomad)</a></li>
+    <ul>
+        <li><a href = "https://github.com/MultiversalNomad">GitHub (MultiversalNomad)</a>
+        <li><a href = "https://gist.github.com/MultiversalNomad">Gist (MultiversalNomad)</a>
+    </ul>
 </p>
 <p>
     <strong>Video</strong>
-    <li><a href = "http://www.youtube.com/user/MultiversalNomad">YouTube (MultiversalNomad)</a></li>
+    <ul>
+        <li><a href = "http://www.youtube.com/user/MultiversalNomad">YouTube (MultiversalNomad)</a>
+    </ul>
 </p>
 <p>
     <strong>Visual Art</strong>
-    <li><a href = "http://temporal-nomad.deviantart.com/">deviantART (Temporal-Nomad)</a></li>
+    <ul>
+        <li><a href = "http://temporal-nomad.deviantart.com/">deviantART (Temporal-Nomad)</a>
+    </ul>
 </p>
 <p>
     <strong>Photography</strong>
-    <li><a href = "http://www.flickr.com/people/jplc/">Flickr (The Unknown One)</a></li>
+    <ul>
+        <li><a href = "http://www.flickr.com/people/jplc/">Flickr (The Unknown One)</a>
+    </ul>
 </p>
 <p>
     <strong>Communities</strong>
-    <li><a href = "http://www.gamasutra.com/blogs/JosephCassano/508/">Gamasutra (Joseph Cassano)</a></li>
+    <ul>
+        <li><a href = "http://www.gamasutra.com/blogs/JosephCassano/508/">Gamasutra (Joseph Cassano)</a>
+    </ul>
 </p>
 <p>
     <strong>Gaming Services (Console)</strong>
-    <li><a href="http://us.playstation.com/playstation/psn/visit/profiles/MultiversalNomad">PlayStation Network (MultiversalNomad)</a></li>
-    <li><a href="http://live.xbox.com/en-US/Profile?Gamertag=JPLC">Xbox LIVE</a></li>
+    <ul>
+        <li><a href="http://us.playstation.com/playstation/psn/visit/profiles/MultiversalNomad">PlayStation Network (MultiversalNomad)</a>
+        <li><a href="http://live.xbox.com/en-US/Profile?Gamertag=JPLC">Xbox LIVE</a>
+    </ul>
 </p>
 <p>
     <strong>Gaming Services (PC)</strong>
-    <li><a href = "http://steamcommunity.com/id/jplc">Steam</a></li>
-    <li><a href="http://profile.xfire.com/jplc">Xfire</a></li>
+    <ul>
+        <li><a href = "http://steamcommunity.com/id/jplc">Steam</a>
+        <li><a href="http://profile.xfire.com/jplc">Xfire</a>
+    </ul>
 </p>
