--- a/testingjekyll.html
+++ b/testingjekyll.html
@@ -5,7 +5,9 @@ title: Home
 <p>Welcome! This is the website of {{ site.firstName }} {{ site.lastName }}. I also go by {{ site.nickname }} in some places online.</p>
 <p>Feel free to have a look around.</p>
 <p>
-    <li>Twitter: <a href="{{ site.twitterUrl }}">{{ site.twitterName }}</a></li>
-    <li>GitHub: <a href="{{ site.gitHubUrl }}">{{ site.gitHubName }}</a></li>
-    <li>GitHub Gist: <a href="{{ site.gitHubGistUrl }}">{{ site.gitHubGistName }}</a></li>
+    <ul>
+        <li>Twitter: <a href="{{ site.twitterUrl }}">{{ site.twitterName }}</a>
+        <li>GitHub: <a href="{{ site.gitHubUrl }}">{{ site.gitHubName }}</a>
+        <li>GitHub Gist: <a href="{{ site.gitHubGistUrl }}">{{ site.gitHubGistName }}</a>
+    </ul>
 </p>
