Edited index.hmtl files to use Jekyll. Site generation should now be using Jekyll by default. Also some small minor changes.

--- a/test01/index_original.html
+++ b/test01/index_original.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joseph "JPLC" Cassano | Error | 404 Not Found</title>
+<title>Joseph "JPLC" Cassano | About Me</title>
 
 <!-- Google Analytics -->
 <script>
@@ -200,10 +200,15 @@ img.customBorder
 <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
 
-<h2>404 Not Found</h2>
+<h2>About Me</h2>
 
 <div id="Content">
-<p>Seems like the requested page or directory doesn't exist. Try one of the navigation links above to find what you were looking for.</p>
+<p class="centeredImage">
+<img src="/images/my_face.jpg" alt="My face">
+</p>
+<p>I am Joseph Cassano (also known as JPLC), a Canadian video game developer and technical animator.</p>
+
+<p>You can contact me at my e-mail: joseph DOT cassano AT jplc DOT ca</p>
 </div>
 
 <p>
