Pared down website. Kept the old structure in the files, but in terms of the end-user navigable site, I've pared things down. Also tried to use Liquid variables and stuff to help with generation.

--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Dodge & Shoot
+title: Dodge & Shoot (Flash) (2010)
 ---
 <p>If the game below is not working, make sure you have the latest version of the <a href="http://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
 <object width="550" height="500">
@@ -10,6 +10,5 @@ title: Dodge & Shoot
 <ul>
     <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
     <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
-    <li><a href = "/blog/?p=112">Read Blog post</a>
     <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
 </ul>
