--- a/about_me/index.html
+++ b/about_me/index.html
@@ -7,3 +7,4 @@ title: About Me
 </p>
 <p>I am {{ site.firstName }} {{ site.lastName }} (also known as {{ site.nickname }}), a Canadian video game developer.</p>
 <p>You can contact me at my e-mail: {{ site.emailWritten }}</p>
+<p>My social media and such can be found on the <a href="/">homepage</a>.</p>
