--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Capture The Frog
+title: Capture The Frog (Flash) (2010)
 ---
 <p>If the game below is not working, make sure you have the latest version of the <a href="http://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
 <object width="320" height="512">
@@ -10,6 +10,5 @@ title: Capture The Frog
 <ul>
     <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
     <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
-    <li><a href = "/blog/?p=72">Read Blog post</a>
     <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
 </ul>
