--- a/games/index.html
+++ b/games/index.html
@@ -2,36 +2,55 @@
 layout: default
 title: Games
 ---
-<p>The following are links to games I have made. The list is reverse chronological; newer games are at the top, older ones are at the bottom.</p>
+{% assign indexString = "index.html" %}
+{% assign gamesDir = "/games/" %}
+{% assign unityPrototypePageRelDir = "prototypes/unity_basic_char_control_v1_0/" %}
+{% assign unityPrototypePageDir = gamesDir | append: unityPrototypePageRelDir %}
+{% assign unityPrototypePageTitle = unityPrototypePageDir | append: indexString %}
+{% assign dodgeAndShootPageRelDir = "dodge_and_shoot/" %}
+{% assign dodgeAndShootPageDir = gamesDir | append: dodgeAndShootPageRelDir %}
+{% assign dodgeAndShootPageTitle = dodgeAndShootPageDir | append: indexString %}
+{% assign captureTheFrogPageRelDir = "capture_the_frog/" %}
+{% assign captureTheFrogPageDir = gamesDir | append: captureTheFrogPageRelDir %}
+{% assign captureTheFrogPageTitle = captureTheFrogePageDir | append: indexString %}
+{% assign unityPrototypeTitle = "TITLE_NOT_FOUND" %}
+{% assign dodgeAndShootTitle = "TITLE_NOT_FOUND" %}
+{% assign captureTheFrogTitle = "TITLE_NOT_FOUND" %}
+{% for item in site.pages %}
+    {% if item.url == unityPrototypePageUrl %}
+        {% assign unityPrototypeTitle = item.title }
+    {% elsif item.url == dodgeAndShootPageUrl %}
+        {% assign dodgeAndShootTitle = item.title %}
+    {% elsif item.url == captureTheFrogPageUrl %}
+        {% assign captureTheFrogTitle = item.title %}
+    {% endif %}
+{% endfor %}
+<p>
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>.
+<p>The following is a reverse chronological list of games that I have made myself.</p>
+<p>
+    <strong>{{ unityPrototypeTitle }}</strong>
+    <ul>
+        <li><a href = "{{ unityPrototypePageRelDir }}">Play here</a>
+    </ul>
+</p>
 <img src="/images/DodgeAndShoot_thumb.jpg" class="floatRight gameOffset customBorder" alt="Dodge & Shoot">
 <p>
-    <strong>Dodge & Shoot</strong>
+    <strong>{{ dodgeAndShootTitle }}</strong>
     <ul>
-        <li><a href = "dodge_and_shoot/">Play here</a>
+        <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
         <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
-        <li><a href = "/blog/?p=112">Read Blog post</a>
         <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
     </ul>
 </p>
 <img src="/images/CaptureTheFrog_thumb.jpg" class="floatRight gameOffset customBorder" alt="Capture The Frog">
 <p>
-    <strong>Capture The Frog</strong>
+    <strong>{{ captureTheFrogTitle }}</strong>
     <ul>
-        <li><a href = "capture_the_frog/">Play here</a>
+        <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
         <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
-        <li><a href = "/blog/?p=72">Read Blog post</a>
         <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
-    </ul>
-</p>
-<p><strong>---</strong></p>
-<h3>Prototypes</h3>
-<p>These are prototype builds of gameplay that I am working on. This list may shrink/change if the gameplay is incorporated into final game builds.</p>
-<p>
-    <strong>Unity Project - Third Person Movement and Camera Control v1.0</strong>
-    <ul>
-        <li><a href = "prototypes/unity_basic_char_control_v1_0/">Play here</a>
-        <li><a href = "/blog/?p=369">Read Blog post</a>
     </ul>
 </p>
