--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Unity Project - Third Person Movement and Camera Control v1.0
+title: Third Person Movement and Camera Control v1.0 (Unity; Prototype) (2014)
 ---
 <p>
     <ul>
@@ -24,6 +24,3 @@ title: Unity Project - Third Person Movement and Camera Control v1.0
     </div>
 </div>
 <p class="footer">&laquo; created with <a href="https://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
-<ul>
-    <li><a href = "/blog/?p=369">Read Blog post</a>
-</ul>
