--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 layout: default
 title: Home
 ---
+{% assign twitterUrl = "https://twitter.com/JPLC" %}
+{% assign gitHubUrl = "https://github.com/MultiversalNomad" &}
+{% assign gitHubGistUrl = "https://gist.github.com/MultiversalNomad" %}
 <p>Welcome! This is the website of {{ site.firstName }} {{ site.lastName }}. I also go by {{ site.nickname }} in some places online.</p>
 <p>Feel free to have a look around.</p>
 <p>
     <ul>
-        <li>Twitter: <a href="{{ site.twitterUrl }}">{{ site.twitterName }}</a>
-        <li>GitHub: <a href="{{ site.gitHubUrl }}">{{ site.gitHubName }}</a>
-        <li>GitHub Gist: <a href="{{ site.gitHubGistUrl }}">{{ site.gitHubGistName }}</a>
+        <li><a href="{{ twitterUrl }}">Twitter</a>
+        <li><a href="{{ gitHubUrl }}">GitHub</a>)
+        <ul>
+            <li><a href="{{ gitHubGistUrl }}">GitHub Gist</a>
+        </ul>
+        <li><a href="http://www.youtube.com/user/MultiversalNomad">YouTube</a>
+        <li><a href="{{ site.linkedInUrl }}">LinkedIn</a>
     </ul>
 </p>
