--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
 <p>
     <ul>
         <li><a href="{{ twitterUrl }}">Twitter</a>
-        <li><a href="{{ gitHubUrl }}">GitHub</a>)
+        <li><a href="{{ gitHubUrl }}">GitHub</a>
         <ul>
             <li><a href="{{ gitHubGistUrl }}">GitHub Gist</a>
         </ul>
