--- a/games/index.html
+++ b/games/index.html
@@ -18,7 +18,7 @@ title: Games
 {% assign captureTheFrogTitle = "TITLE_NOT_FOUND" %}
 {% for item in site.pages %}
     {% if item.path == unityPrototypePagePath %}
-        {% assign unityPrototypeTitle = item.title }
+        {% assign unityPrototypeTitle = item.title %}
     {% elsif item.path == dodgeAndShootPagePath %}
         {% assign dodgeAndShootTitle = item.title %}
     {% elsif item.path == captureTheFrogPagePath %}
