--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 {% assign twitterUrl = "https://twitter.com/JPLC" %}
-{% assign gitHubUrl = "https://github.com/MultiversalNomad" &}
+{% assign gitHubUrl = "https://github.com/MultiversalNomad" %}
 {% assign gitHubGistUrl = "https://gist.github.com/MultiversalNomad" %}
 <p>Welcome! This is the website of {{ site.firstName }} {{ site.lastName }}. I also go by {{ site.nickname }} in some places online.</p>
 <p>Feel free to have a look around.</p>
