--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
         <ul>
             <li><a href="{{ gitHubGistUrl }}">GitHub Gist</a>
         </ul>
-        <li><a href="http://www.youtube.com/user/MultiversalNomad">YouTube</a>
+        <li><a href="https://www.youtube.com/user/MultiversalNomad">YouTube</a>
         <li><a href="{{ site.linkedInUrl }}">LinkedIn</a>
     </ul>
 </p>
