--- a/games/index.html
+++ b/games/index.html
@@ -12,7 +12,7 @@ title: Games
 {% assign dodgeAndShootPagePath = dodgeAndShootPageDir | append: indexString %}
 {% assign captureTheFrogPageRelDir = "capture_the_frog/" %}
 {% assign captureTheFrogPageDir = gamesDir | append: captureTheFrogPageRelDir %}
-{% assign captureTheFrogPagePath = captureTheFrogePageDir | append: indexString %}
+{% assign captureTheFrogPagePath = captureTheFrogPageDir | append: indexString %}
 {% assign unityPrototypeTitle = "TITLE_NOT_FOUND" %}
 {% assign dodgeAndShootTitle = "TITLE_NOT_FOUND" %}
 {% assign captureTheFrogTitle = "TITLE_NOT_FOUND" %}
@@ -26,7 +26,7 @@ title: Games
     {% endif %}
 {% endfor %}
 <p>
-<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInPath }}">R&eacute;sum&eacute;</a>.
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>.
 <p>The following is a reverse chronological list of games that I have made myself.</p>
 <p>
     <strong>{{ unityPrototypeTitle }}</strong>
@@ -34,9 +34,9 @@ title: Games
         <li><a href = "{{ unityPrototypePageRelDir }}">Play here</a>
     </ul>
 </p>
-<img src="/images/DodgeAndShoot_thumb.jpg" class="floatRight gameOffset customBorder" alt="Dodge & Shoot">
 <p>
     <strong>{{ dodgeAndShootTitle }}</strong>
+    <img src="/images/DodgeAndShoot_thumb.jpg" class="floatRight gameOffset customBorder" alt="Dodge & Shoot">
     <ul>
         <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
@@ -44,9 +44,9 @@ title: Games
         <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
     </ul>
 </p>
-<img src="/images/CaptureTheFrog_thumb.jpg" class="floatRight gameOffset customBorder" alt="Capture The Frog">
 <p>
     <strong>{{ captureTheFrogTitle }}</strong>
+    <img src="/images/CaptureTheFrog_thumb.jpg" class="floatRight gameOffset customBorder" alt="Capture The Frog">
     <ul>
         <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
