--- a/games/index.html
+++ b/games/index.html
@@ -36,7 +36,7 @@ title: Games
 </p>
 <p>
     <strong>{{ dodgeAndShootTitle }}</strong>
-    <img src="/images/DodgeAndShoot_thumb.jpg" class="floatRight gameOffset customBorder" alt="Dodge & Shoot">
+    <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
     <ul>
         <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
@@ -46,7 +46,7 @@ title: Games
 </p>
 <p>
     <strong>{{ captureTheFrogTitle }}</strong>
-    <img src="/images/CaptureTheFrog_thumb.jpg" class="floatRight gameOffset customBorder" alt="Capture The Frog">
+    <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
     <ul>
         <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
