--- a/about_me/index.html
+++ b/about_me/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: About Me
 ---
-<p class="centeredImage">
+<p class="centered">
 <img src="/images/my_face.jpg" alt="My face">
 </p>
 <p>I am {{ site.firstName }} {{ site.lastName }} (also known as {{ site.nickname }}), a Canadian video game developer.</p>
