--- a/games/index.html
+++ b/games/index.html
@@ -26,7 +26,7 @@ title: Games
     {% endif %}
 {% endfor %}
 <p>
-<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>.
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.
 <p>The following is a reverse chronological list of games that I have made myself.</p>
 <p>
     <strong>{{ unityPrototypeTitle }}</strong>
