--- a/about_me/index.html
+++ b/about_me/index.html
@@ -5,6 +5,6 @@ title: About Me
 <p class="centered">
     <img src="/images/my_face.jpg" alt="My face">
 </p>
-<p>I am {{ site.firstName }} {{ site.lastName }} (also known as {{ site.nickname }}), a Canadian video game developer.</p>
-<p>You can contact me at my e-mail: {{ site.emailWritten }}</p>
+<p>I am {{- site.firstName -}} {{- site.lastName -}} (also known as {{- site.nickname -}}), a Canadian video game developer.</p>
+<p>You can contact me at my e-mail: {{- site.emailWritten -}}</p>
 <p>My social media and such can be found on the <a href="/">homepage</a>.</p>
