--- a/games/index.html
+++ b/games/index.html
@@ -2,55 +2,55 @@
 layout: default
 title: Games
 ---
-{% assign indexString = "index.html" %}
-{% assign gamesDir = "games/" %}
-{% assign unityPrototypePageRelDir = "prototypes/unity_basic_char_control_v1_0/" %}
-{% assign unityPrototypePageDir = gamesDir | append: unityPrototypePageRelDir %}
-{% assign unityPrototypePagePath = unityPrototypePageDir | append: indexString %}
-{% assign dodgeAndShootPageRelDir = "dodge_and_shoot/" %}
-{% assign dodgeAndShootPageDir = gamesDir | append: dodgeAndShootPageRelDir %}
-{% assign dodgeAndShootPagePath = dodgeAndShootPageDir | append: indexString %}
-{% assign captureTheFrogPageRelDir = "capture_the_frog/" %}
-{% assign captureTheFrogPageDir = gamesDir | append: captureTheFrogPageRelDir %}
-{% assign captureTheFrogPagePath = captureTheFrogPageDir | append: indexString %}
-{% assign unityPrototypeTitle = "TITLE_NOT_FOUND" %}
-{% assign dodgeAndShootTitle = "TITLE_NOT_FOUND" %}
-{% assign captureTheFrogTitle = "TITLE_NOT_FOUND" %}
-{% for item in site.pages %}
-    {% if item.path == unityPrototypePagePath %}
-        {% assign unityPrototypeTitle = item.title %}
-    {% elsif item.path == dodgeAndShootPagePath %}
-        {% assign dodgeAndShootTitle = item.title %}
-    {% elsif item.path == captureTheFrogPagePath %}
-        {% assign captureTheFrogTitle = item.title %}
-    {% endif %}
-{% endfor %}
+{%- assign indexString = "index.html" -%}
+{%- assign gamesDir = "games/" -%}
+{%- assign unityPrototypePageRelDir = "prototypes/unity_basic_char_control_v1_0/" -%}
+{%- assign unityPrototypePageDir = gamesDir | append: unityPrototypePageRelDir -%}
+{%- assign unityPrototypePagePath = unityPrototypePageDir | append: indexString -%}
+{%- assign dodgeAndShootPageRelDir = "dodge_and_shoot/" -%}
+{%- assign dodgeAndShootPageDir = gamesDir | append: dodgeAndShootPageRelDir -%}
+{%- assign dodgeAndShootPagePath = dodgeAndShootPageDir | append: indexString -%}
+{%- assign captureTheFrogPageRelDir = "capture_the_frog/" -%}
+{%- assign captureTheFrogPageDir = gamesDir | append: captureTheFrogPageRelDir -%}
+{%- assign captureTheFrogPagePath = captureTheFrogPageDir | append: indexString -%}
+{%- assign unityPrototypeTitle = "TITLE_NOT_FOUND" -%}
+{%- assign dodgeAndShootTitle = "TITLE_NOT_FOUND" -%}
+{%- assign captureTheFrogTitle = "TITLE_NOT_FOUND" -%}
+{%- for item in site.pages -%}
+    {%- if item.path == unityPrototypePagePath -%}
+        {%- assign unityPrototypeTitle = item.title -%}
+    {%- elsif item.path == dodgeAndShootPagePath -%}
+        {%- assign dodgeAndShootTitle = item.title -%}
+    {%- elsif item.path == captureTheFrogPagePath -%}
+        {%- assign captureTheFrogTitle = item.title -%}
+    {%- endif -%}
+{%- endfor -%}
 <p>
-<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{- site.linkedInUrl -}}">r&eacute;sum&eacute;</a>.
 <p>The following is a reverse chronological list of games that I have made myself.</p>
 <p>
-    <strong>{{ unityPrototypeTitle }}</strong>
+    <strong>{{- unityPrototypeTitle -}}</strong>
     <ul>
-        <li><a href = "{{ unityPrototypePageRelDir }}">Play here</a>
+        <li><a href = "{{- unityPrototypePageRelDir -}}">Play here</a>
     </ul>
 </p>
 <p>
-    <strong>{{ dodgeAndShootTitle }}</strong>
+    <strong>{{- dodgeAndShootTitle -}}</strong>
     <br>
     <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
     <ul>
-        <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
+        <li><a href = "{{- dodgeAndShootPageRelDir -}}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
         <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
         <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
     </ul>
 </p>
 <p>
-    <strong>{{ captureTheFrogTitle }}</strong>
+    <strong>{{- captureTheFrogTitle -}}</strong>
     <br>
     <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
     <ul>
-        <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
+        <li><a href = "{{- captureTheFrogPageRelDir -}}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
         <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
         <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
