--- a/test.html
+++ b/test.html
@@ -7,12 +7,12 @@
             .container-page
             {
                 display: grid;
-                grid-template-columns: auto auto auto [col-last];
+                grid-template-columns: auto 512px auto [col-last];
                 grid-template-rows: auto auto auto auto auto;
                 align-items: stretch;
                 justify-items: stretch;
-                grid-column-gap: 25px;
-                grid-row-gap: 0px;
+                grid-column-gap: 2px;
+                grid-row-gap: 2px;
             }
             
             .item-page-title
@@ -62,8 +62,8 @@
                 grid-template-rows: auto [row-last];
                 align-items: stretch;
                 justify-items: stretch;
-                grid-column-gap: 50px;
-                grid-row-gap: 0px;
+                grid-column-gap: 32px;
+                grid-row-gap: 2px;
             }
             
             .item-nav-link-1
@@ -113,24 +113,24 @@
                 <h1 style="text-align:center">Testing, testing, 1, 2, 3.</h1>
             </div>
             <div class="item-page-banner">
-                <p style="text-align:center">BANNER</p>
+                <p style="text-align:center"><img src="https://www.jplc.ca/images/eye_banner.jpg"></p>
             </div>
             <div class="item-page-nav">
                 <div class="container-nav">
                     <div class="item-nav-item-1">
-                        <p style="text-align:center">One</p>
+                        <p style="text-align:center">Home</p>
                     </div>
                     <div class="item-nav-item-2">
-                        <p style="text-align:center">Two</p>
+                        <p style="text-align:center">About Me</p>
                     </div>
                     <div class="item-nav-item-3">
-                        <p style="text-align:center">Three</p>
+                        <p style="text-align:center">Games</p>
                     </div>
                     <div class="item-nav-item-4">
-                        <p style="text-align:center">Four</p>
+                        <p style="text-align:center">Résumé</p>
                     </div>
                     <div class="item-nav-item-5">
-                        <p style="text-align:center">Five</p>
+                        <p style="text-align:center">Contact</p>
                     </div>
                 </div>
             </div>
