--- a/test.html
+++ b/test.html
@@ -117,19 +117,19 @@
             </div>
             <div class="item-page-nav">
                 <div class="container-nav">
-                    <div class="item-nav-item-1">
+                    <div class="item-nav-link-1">
                         <p style="text-align:center">Home</p>
                     </div>
-                    <div class="item-nav-item-2">
+                    <div class="item-nav-link-2">
                         <p style="text-align:center">About Me</p>
                     </div>
-                    <div class="item-nav-item-3">
+                    <div class="item-nav-link-3">
                         <p style="text-align:center">Games</p>
                     </div>
-                    <div class="item-nav-item-4">
+                    <div class="item-nav-link-4">
                         <p style="text-align:center">Résumé</p>
                     </div>
-                    <div class="item-nav-item-5">
+                    <div class="item-nav-link-5">
                         <p style="text-align:center">Contact</p>
                     </div>
                 </div>
