--- a/games/index.html
+++ b/games/index.html
@@ -25,19 +25,19 @@ title: Games
         {%- assign captureTheFrogTitle = item.title -%}
     {%- endif -%}
 {%- endfor -%}
-<p>
-<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.</p>
 <p>The following is a reverse chronological list of games that I have made myself.</p>
 <p>
-    <strong>{{ unityPrototypeTitle }}</strong>
+    <h3>{{ unityPrototypeTitle }}</h3>
     <ul>
         <li><a href = "{{ unityPrototypePageRelDir }}">Play here</a>
     </ul>
 </p>
 <p>
-    <strong>{{ dodgeAndShootTitle }}</strong>
-    <br>
-    <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
+    <h3>{{ dodgeAndShootTitle }}</h3>
+    <p>
+        <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
+    </p>
     <ul>
         <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
@@ -46,9 +46,10 @@ title: Games
     </ul>
 </p>
 <p>
-    <strong>{{ captureTheFrogTitle }}</strong>
-    <br>
-    <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
+    <h3>{{ captureTheFrogTitle }}</h3>
+    <p>
+        <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
+    </p>
     <ul>
         <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
