Update and rename test.html to index_test.html

--- a/index_test.html
+++ b/index_test.html
@@ -11,7 +11,7 @@
                 <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
             </div>
             <div class="item-page-banner">
-                <p class="centered"><img src="https://www.jplc.ca/images/eye_banner.jpg"></p>
+                <p class="centered"><img src="/images/eye_banner.jpg"></p>
             </div>
             <div class="item-page-nav">
                 <div class="container-nav">
