--- a/index_test.html
+++ b/index_test.html
@@ -7,29 +7,33 @@
     </head>
     <body>
         <div class="container-page">
-            <div class="item-page-title">
-                <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
-            </div>
-            <div class="item-page-banner">
-                <p class="centered"><img src="/images/eye_banner.jpg"></p>
-            </div>
+            <header>
+                <div class="item-page-title">
+                    <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
+                </div>
+                <div class="item-page-banner">
+                    <p class="centered"><img src="/images/eye_banner.jpg"></p>
+                </div>
+            </header>
             <div class="item-page-nav">
                 <div class="container-nav">
-                    <div class="item-nav-item-1">
-                        <p class="centered">Home</p>
-                    </div>
-                    <div class="item-nav-item-2">
-                        <p class="centered">About Me</p>
-                    </div>
-                    <div class="item-nav-item-3">
-                        <p class="centered">Games</p>
-                    </div>
-                    <div class="item-nav-item-4">
-                        <p class="centered">Résumé</p>
-                    </div>
-                    <div class="item-nav-item-5">
-                        <p class="centered">Contact</p>
-                    </div>
+                    <nav>
+                        <div class="item-nav-item-1">
+                            <p class="centered"><a class="nav" href="">Home</a></p>
+                        </div>
+                        <div class="item-nav-item-2">
+                            <p class="centered"><a class="nav" href="">About Me</a></p>
+                        </div>
+                        <div class="item-nav-item-3">
+                            <p class="centered"><a class="nav" href="">Games</a></p>
+                        </div>
+                        <div class="item-nav-item-4">
+                            <p class="centered"><a class="nav" href="">R&eacute;sum&eacute;</a></p>
+                        </div>
+                        <div class="item-nav-item-5">
+                            <p class="centered"><a class="nav" href="">Contact</a></p>
+                        </div>
+                    </nav>
                 </div>
             </div>
             <div class="item-page-content">
@@ -39,8 +43,10 @@
                 </p>
             </div>
             <div class="item-page-footer">
-                <p class="centered">~</p>
-                <p class="centered">My page.</p>
+                <footer>
+                    <p class="centered">~</p>
+                    <p class="centered">My page.</p>
+                </footer>
             </div>
         </div>
     </body>
