--- a/index_test.html
+++ b/index_test.html
@@ -7,17 +7,21 @@
     </head>
     <body>
         <div class="container-page">
-            <header>
-                <div class="item-page-title">
-                    <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
-                </div>
-                <div class="item-page-banner">
-                    <p class="centered"><img src="/images/eye_banner.jpg"></p>
-                </div>
-            </header>
+            <div class="item-page-header">
+                <header>
+                    <div class="container-header">
+                        <div class="item-header-title">
+                            <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
+                        </div>
+                        <div class="item-header-banner">
+                            <p class="centered"><img src="/images/eye_banner.jpg"></p>
+                        </div>
+                    </div>
+                </header>
+            </div>
             <div class="item-page-nav">
-                <div class="container-nav">
-                    <nav>
+                <nav>
+                    <div class="container-nav">
                         <div class="item-nav-item-1">
                             <p class="centered"><a class="nav" href="">Home</a></p>
                         </div>
@@ -33,8 +37,8 @@
                         <div class="item-nav-item-5">
                             <p class="centered"><a class="nav" href="">Contact</a></p>
                         </div>
-                    </nav>
-                </div>
+                    </div>
+                </nav>
             </div>
             <div class="item-page-content">
                 <h2 class="centered">Howdy</h2>
