--- a/index_test.html
+++ b/index_test.html
@@ -7,34 +7,34 @@
     </head>
     <body>
         <div class="container-page">
-            <div class="item-page-header">
+            <div class="item-page">
                 <header>
                     <div class="container-header">
-                        <div class="item-header-title">
+                        <div class="item-header">
                             <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
                         </div>
-                        <div class="item-header-banner">
+                        <div class="item-header">
                             <p class="centered"><img src="/images/eye_banner.jpg"></p>
                         </div>
                     </div>
                 </header>
             </div>
-            <div class="item-page-nav">
+            <div class="item-page">
                 <nav>
                     <div class="container-nav">
-                        <div class="item-nav-item-1">
+                        <div class="item-nav">
                             <p class="centered"><a class="nav" href="">Home</a></p>
                         </div>
-                        <div class="item-nav-item-2">
+                        <div class="item-nav">
                             <p class="centered"><a class="nav" href="">About Me</a></p>
                         </div>
-                        <div class="item-nav-item-3">
+                        <div class="item-nav">
                             <p class="centered"><a class="nav" href="">Games</a></p>
                         </div>
-                        <div class="item-nav-item-4">
+                        <div class="item-nav">
                             <p class="centered"><a class="nav" href="">R&eacute;sum&eacute;</a></p>
                         </div>
-                        <div class="item-nav-item-5">
+                        <div class="item-nav">
                             <p class="centered"><a class="nav" href="">Contact</a></p>
                         </div>
                     </div>
@@ -43,10 +43,10 @@
             <div class="item-page-content">
                 <h2 class="centered">Howdy</h2>
                 <p>
-                    Content goes here. Blah blah blah, bloo bloo bloo. Blee blee blee. Blargh blargh blargh.
+                    Content goes here. Blah blah blah, bloo bloo bloo. Blee blee blee. Blargh blargh blargh. <a href="">Foo</a>.
                 </p>
             </div>
-            <div class="item-page-footer">
+            <div class="item-page">
                 <footer>
                     <p class="centered">~</p>
                     <p class="centered">My page.</p>
